Code clean and sql skeleton